--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
+                <!-- <li><a href="#services" class="menu-btn">Services</a></li> -->
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <!-- <li><a href="#teams" class="menu-btn">Teams</a></li> -->
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -45,7 +45,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Ahmad Zeeshan</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#contact">Contact me</a>
             </div>
         </div>
     </section>
@@ -60,12 +60,15 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Ahmad Zeeshan and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque
-                        autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus
-                        accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus
-                        veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis
-                        beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                    <a href="#">Download CV</a>
+                    <p>I am a recent graduate in software engineering from Superior University, with a strong
+                        foundation in computer science and a GPA of 2.9. As a passionate and dedicated software
+                        engineer, I am eager to embark on a fulfilling career in the world of technology. My education
+                        has equipped me with essential programming skills and problem-solving abilities, which I am
+                        excited to apply to real-world challenges. I am committed to continuous learning and staying
+                        up-to-date with industry trends to ensure that I can contribute effectively to the field of
+                        software engineering. With a thirst for knowledge and a determination to succeed, I am ready to
+                        make my mark in the software development arena.</p>
+                    <a href="https://github.com/Ahmad-Zeeshan-Ramzan/Resume">Download CV</a>
                 </div>
             </div>
         </div>
@@ -110,10 +113,11 @@ skills section start -->
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est
-                        recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi.
-                        Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam
-                        alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>As a beginner in web development, I'm building a strong foundation in key technologies. I'm
+                        currently proficient in HTML, CSS, and JavaScript, and I'm actively learning PHP and Bootstrap
+                        to enhance my skills. I'm passionate about creating user-friendly websites and am committed to
+                        continuous learning and growth in this field. Check out my portfolio to see my early work and
+                        follow my journey as I develop my skills in web development.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -127,14 +131,14 @@ skills section start -->
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
@@ -209,28 +213,29 @@ skills section start -->
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga
-                        corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>If you have any questions, feedback, or inquiries, please don't hesitate to get in touch with me.
+                        Your input is invaluable. Reach out to me via
+                        the provided contact information, and I'll respond promptly. Thank you for visiting.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="sub-title">Ahmad Zeeshan</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">Lahore, Pakistan</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">zesshan92322@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -240,17 +245,17 @@ skills section start -->
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" placeholder="Name">
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" placeholder="Email">
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" placeholder="Subject">
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.."></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
@@ -262,10 +267,10 @@ skills section start -->
     </section>
 
     <!-- footer section start -->
-    <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span
-                class="far fa-copyright"></span> 2020 All rights reserved.</span>
-    </footer>
+    <!-- <footer>
+        <span>Edited By <a href="#">Ahmad Zeeshan</a> | <span
+                class="far fa-copyright"></span> 2023 All rights reserved.</span>
+    </footer> -->
 
     <script src="script.js"></script>
 </body>
