--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         up-to-date with industry trends to ensure that I can contribute effectively to the field of
                         software engineering. With a thirst for knowledge and a determination to succeed, I am ready to
                         make my mark in the software development arena.</p>
-                    <a href="https://ahmad-zeeshan-ramzan.github.io/Resume/">View My CV</a>
+                    <a href="https://ahmad-zeeshan-ramzan.github.io/Resume/">Download My CV</a>
                 </div>
             </div>
         </div>
